# fpm

./: .editorconfig  Cargo.toml  README.md
.github/workflows/: ci.yml  mirror.yml
src/: lib.rs  main.rs  package.rs
src/common/: http.rs  mod.rs  shell.rs
src/install/: mod.rs
src/make/: mod.rs
src/remove/: mod.rs
src/script/: mod.rs
src/utils/: fs.rs  hash.rs  log.rs  mod.rs  path.rs  user.rs
