[package]
name = "fpm"
version = "0.1.2"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
blake2 = "0.10.6"
clap = { version = "4.5.50", features = ["derive"] }
crossterm = "0.29.0"
futures = "0.3.31"
nix = "0.30.1"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["stream"] }
sequoia-net = "0.30.0"
sequoia-openpgp = "2.0.0"
sha2 = "0.10.9"
tar = "0.4.44"
tokio = { version = "1.48.0", features = ["full"] }
zstd = "0.13.3"
